--- a/scripts/XAU_MonteCarlo.ipynb
+++ b/scripts/XAU_MonteCarlo.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a21d1927",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
     }
    ],
    "source": [
-    "# Download daily gold futures data for the last 3 months\n",
+    "# Downloading daily gold futures data for the last 3 months\n",
     "data = yf.download(\"GC=F\", period=\"3mo\", interval=\"1d\")\n",
     "close_prices = data['Close']['GC=F']\n",
     "close_prices.head()"
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "188d152b",
    "metadata": {},
    "outputs": [
@@ -155,6 +155,7 @@
     }
    ],
    "source": [
+    "# Geometric Borwnian Motion formula\n",
     "for t in range(1, steps):\n",
     "    Z = np.random.normal(size=paths)\n",
     "    simulations[t] = simulations[t-1] * np.exp((mu_hourly - 0.5*sigma_hourly**2)*dt + sigma_hourly*np.sqrt(dt)*Z)\n",
@@ -231,13 +232,13 @@
    "outputs": [],
    "source": [
     "from matplotlib.colors import LogNorm\n",
-    "# Higher-resolution price bins\n",
+    "# High price bins\n",
     "bins = np.linspace(simulations.min(), simulations.max(), 200)\n",
     "\n",
-    "# Prepare heatmap matrix (bins x time steps)\n",
+    "# Heatmap matrix (bins x time steps)\n",
     "heatmap_data = np.zeros((len(bins) - 1, simulations.shape[0]))\n",
     "\n",
-    "# Build density histograms for every time step\n",
+    "# Density histograms for every time step\n",
     "for t in range(simulations.shape[0]):\n",
     "    counts, _ = np.histogram(simulations[t], bins=bins, density=True)\n",
     "    heatmap_data[:, t] = counts\n",
@@ -256,6 +257,33 @@
     "plt.ylabel(\"Price Bins\")\n",
     "plt.title(\"Monte Carlo Probability Heatmap (High Resolution)\")\n",
     "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55980fe2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Short and Long EMA periods\n",
+    "short_window = 10  # e.g., 10 days\n",
+    "long_window = 30   # e.g., 30 days\n",
+    "\n",
+    "# Computing EMAs on historical close prices\n",
+    "ema_short = close_prices.ewm(span=short_window, adjust=False).mean()\n",
+    "ema_long = close_prices.ewm(span=long_window, adjust=False).mean()\n",
+    "\n",
+    "# Plotting EMAs with historical price\n",
+    "plt.figure(figsize=(12,6))\n",
+    "plt.plot(close_prices, label='Close Price', color='black')\n",
+    "plt.plot(ema_short, label=f'EMA {short_window}', color='blue')\n",
+    "plt.plot(ema_long, label=f'EMA {long_window}', color='red')\n",
+    "plt.title(\"Gold Futures Price with EMA Crossovers\")\n",
+    "plt.xlabel(\"Date\")\n",
+    "plt.ylabel(\"Price\")\n",
+    "plt.legend()\n",
     "plt.show()"
    ]
   }
