--- a/scripts/XAU_MonteCarlo.ipynb
+++ b/scripts/XAU_MonteCarlo.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "55980fe2",
    "metadata": {},
    "outputs": [],
@@ -273,16 +273,44 @@
     "\n",
     "# Computing EMAs on historical close prices\n",
     "ema_short = close_prices.ewm(span=short_window, adjust=False).mean()\n",
-    "ema_long = close_prices.ewm(span=long_window, adjust=False).mean()\n",
+    "ema_long = close_prices.ewm(span=long_window, adjust=False).mean()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "33ce9312",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating signal: 1 = buy, -1 = sell\n",
+    "signal = np.where(ema_short > ema_long, 1, -1)\n",
+    "signal = pd.Series(signal, index=close_prices.index)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbac8911",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Daily returns of the asset\n",
+    "returns = close_prices.pct_change().fillna(0)\n",
     "\n",
-    "# Plotting EMAs with historical price\n",
+    "# Strategy returns = signal * daily returns\n",
+    "strategy_returns = signal.shift(1) * returns  # shift to avoid lookahead bias\n",
+    "\n",
+    "# Cumulative returns\n",
+    "cumulative_returns = (1 + strategy_returns).cumprod()\n",
+    "\n",
+    "# Ploting performance\n",
     "plt.figure(figsize=(12,6))\n",
-    "plt.plot(close_prices, label='Close Price', color='black')\n",
-    "plt.plot(ema_short, label=f'EMA {short_window}', color='blue')\n",
-    "plt.plot(ema_long, label=f'EMA {long_window}', color='red')\n",
-    "plt.title(\"Gold Futures Price with EMA Crossovers\")\n",
+    "plt.plot(cumulative_returns, label='EMA Strategy', color='green')\n",
+    "plt.plot((1 + returns).cumprod(), label='Buy & Hold', color='black', alpha=0.5)\n",
+    "plt.title(\"EMA Crossover Strategy vs Buy & Hold\")\n",
     "plt.xlabel(\"Date\")\n",
-    "plt.ylabel(\"Price\")\n",
+    "plt.ylabel(\"Cumulative Returns\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
